WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125900
ASSERT setting pseudoID with registered DOMSubtreeModified listener
https://bugs.webkit.org/show_bug.cgi?id=125900
Summary
ASSERT setting pseudoID with registered DOMSubtreeModified listener
Eric Carlson
Reported
2013-12-17 18:24:59 PST
Calling setPseudo() from an element's constructor triggers an ASSERT if there are any DOMSubtreeModified listeners in the document because Node::refEventTarget is called when the node has not been adopted yet.
Attachments
Proposed patch
(4.10 KB, patch)
2013-12-17 18:38 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2013-12-17 18:38:24 PST
Created
attachment 219487
[details]
Proposed patch
WebKit Commit Bot
Comment 2
2013-12-17 20:29:08 PST
Comment on
attachment 219487
[details]
Proposed patch Clearing flags on attachment: 219487 Committed
r160748
: <
http://trac.webkit.org/changeset/160748
>
WebKit Commit Bot
Comment 3
2013-12-17 20:29:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug