ASSERT setting pseudoID with registered DOMSubtreeModified listener https://bugs.webkit.org/show_bug.cgi?id=125900

Reviewed by Ryosuke Niwa.

Source/WebCore:

Test: fast/dom/attribute-set-before-element-in-tree.html

* dom/Node.cpp:
(WebCore::Node::dispatchSubtreeModifiedEvent): Return early if the node does not have a
    parent and does not have a DOMSubtreeModified listener.

LayoutTests:

* fast/dom/attribute-set-before-element-in-tree-expected.txt: Added.
* fast/dom/attribute-set-before-element-in-tree.html: Added.


Canonical link: https://commits.webkit.org/143900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160748 268f45cc-cd09-0410-ab3c-d52691b4dbfc